import 'dotenv/config';
import express from 'express';
import mongoose from 'mongoose';
import InventoryClient from './grpc/inventoryClient.js';
import { processPayment } from './grpc/paymentClient.js';
import CartClient from './grpc/cartClient.js';

const app = express();
app.use(express.json());

// ====== CONFIGURACIÃ“N ======
const PORT = process.env.PORT || 4000;
const MONGO_URI = process.env.MONGO_URI;

if (!MONGO_URI) {
  console.error('ERROR: Falta MONGO_URI en .env');
  process.exit(1);
}

// ====== CONEXIÃ“N MONGODB ======
mongoose
  .connect(MONGO_URI)
  .then(() => console.log(' Conectado a MongoDB - Order Service'))
  .catch((err) => {
    console.error(' Error conectando a MongoDB:', err.message);
    process.exit(1);
  });

// ====== MODELO DE ORDEN ======
const VALID_STATUSES = ['CREATED', 'PAID', 'SHIPPED', 'DELIVERED'];

const orderSchema = new mongoose.Schema(
  {
    userId: { type: String, required: true },
    items: [{
      book_id: String,
      title: String,
      quantity: Number,
      price: Number
    }],
    total: { type: Number, required: true },
    status: {
      type: String,
      enum: VALID_STATUSES,
      default: 'CREATED',
    },
    payment_transaction_id: String,
    created_at: { type: Date, default: Date.now },
  },
  { collection: 'orders' }
);

const Order = mongoose.model('Order', orderSchema);

// ====== CLIENTES gRPC ======
const inventoryClient = new InventoryClient();
const cartClient = new CartClient();

// ====== MIDDLEWARE DE LOGS ======
app.use((req, res, next) => {
  console.log(`[Order Service] ${req.method} ${req.path}`);
  next();
});

// ====== ENDPOINTS REST ======

app.get('/api/orders', async (req, res) => {
  const orders = await Order.find();
  res.json(orders);
});

app.get('/api/orders/:id', async (req, res) => {
  try {
    const order = await Order.findById(req.params.id);
    if (!order) return res.status(404).json({ message: 'Orden no encontrada' });
    res.json(order);
  } catch {
    res.status(400).json({ message: 'ID invÃ¡lido' });
  }
});

app.get('/api/orders/user/:userId', async (req, res) => {
  const orders = await Order.find({ userId: req.params.userId });
  res.json(orders);
});

//  NUEVO: Ruta corta /order (redirige a /api/orders/from-cart)
app.post('/order', async (req, res) => {
  console.log('[Order Service] Recibido POST /order, redirigiendo internamente...');
  
  // Redirigir internamente a /api/orders/from-cart
  req.url = '/api/orders/from-cart';
  return app.handle(req, res);
});

// ====== CREAR ORDEN DESDE CARRITO ======
app.post('/api/orders/from-cart', async (req, res) => {
  const { userId } = req.body;

  if (!userId) {
    return res.status(400).json({ message: 'userId es requerido' });
  }

  console.log(`\n${'='.repeat(60)}`);
  console.log(`ðŸ›’ INICIANDO FLUJO DE ORDEN PARA userId: ${userId}`);
  console.log('='.repeat(60));

  try {
    // ===== PASO 1: Obtener items del carrito vÃ­a gRPC =====
    console.log('\n [1/7] Obteniendo items del carrito (gRPC)...');
    const cartData = await cartClient.getCartItems(userId);

    if (!cartData.items || cartData.items.length === 0) {
      console.log('  Carrito vacÃ­o');
      return res.status(400).json({ message: 'El carrito estÃ¡ vacÃ­o' });
    }

    console.log(` Carrito obtenido: ${cartData.items.length} items, total: $${cartData.total.toFixed(2)}`);
    cartData.items.forEach((item, idx) => {
      console.log(`   ${idx + 1}. ${item.title} - ${item.quantity}x $${item.price}`);
    });

    // ===== PASO 2: Validar stock para cada item =====
    console.log('\n [2/7] Validando stock en Inventory (gRPC)...');
    for (const item of cartData.items) {
      const stockResp = await inventoryClient.checkStock(item.book_id);
      if (!stockResp.in_stock || stockResp.available_units < item.quantity) {
        console.log(` Stock insuficiente para ${item.book_id}`);
        return res.status(400).json({
          message: `Stock insuficiente para libro: ${item.title}`
        });
      }
      console.log(`    ${item.title}: ${stockResp.available_units} disponibles`);
    }
    console.log(' Stock validado para todos los items');

    // ===== PASO 3: Reservar stock =====
    console.log('\n [3/7] Reservando stock temporal (gRPC)...');
    const reservedItems = [];
    try {
      for (const item of cartData.items) {
        const reserveResp = await inventoryClient.reserveStock(item.book_id, item.quantity);
        if (!reserveResp.success) {
          throw new Error(`Fallo al reservar: ${item.title}`);
        }
        reservedItems.push(item.book_id);
        console.log(`   âœ“ Reservado: ${item.title} (${item.quantity} unidades)`);
      }
      console.log(' Stock reservado exitosamente');
    } catch (err) {
      console.error(' Error en reserva de stock:', err.message);
      // TODO: Revertir reservas parciales
      return res.status(400).json({ message: err.message });
    }

    // ===== PASO 4: Crear orden en MongoDB =====
    console.log('\n [4/7] Creando orden en base de datos...');
    const newOrder = new Order({
      userId,
      items: cartData.items.map(item => ({
        book_id: item.book_id,
        title: item.title,
        quantity: item.quantity,
        price: item.price
      })),
      total: cartData.total,
      status: 'CREATED'
    });
    const savedOrder = await newOrder.save();
    console.log(` Orden creada con ID: ${savedOrder._id}`);

    // ===== PASO 5: Procesar pago vÃ­a Payment Service =====
   // ===== PASO 5: NO procesar pago aÃºn (esperar frontend) =====
console.log('\n [5/7] Orden creada, esperando pago del frontend...');

// NO llamar a processPayment aquÃ­
// El pago se procesarÃ¡ cuando el usuario haga click en "Pagar" en el frontend

// Responder con la orden creada pero SIN payment_transaction_id
res.status(201).json({
  success: true,
  order_id: savedOrder._id,
  total: savedOrder.total,
  items_count: savedOrder.items.length,
  message: 'Orden creada exitosamente. Por favor procede al pago.'
});

return; //  IMPORTANTE: Salir aquÃ­ para no continuar con el flujo

    if (!paymentResp.success) {
      console.error(' Pago fallido:', paymentResp.message);
      console.log(' Revirtiendo orden...');
      await Order.findByIdAndDelete(savedOrder._id);
      // TODO: Revertir reservas de stock
      return res.status(400).json({
        message: 'Pago fallido: ' + paymentResp.message
      });
    }

    console.log(` Pago exitoso - Transaction ID: ${paymentResp.transaction_id}`);

    // ===== PASO 6: Confirmar reducciÃ³n de stock =====
    console.log('\n  [6/7] Confirmando reducciÃ³n de stock (gRPC)...');
    for (const item of cartData.items) {
      await inventoryClient.confirmStock(item.book_id, item.quantity);
      console.log(`   âœ“ Stock confirmado: ${item.title}`);
    }
    console.log(' Stock reducido permanentemente');

    // ===== PASO 7: Vaciar el carrito =====
    console.log('\n [7/7] Vaciando carrito (gRPC)...');
    const clearResp = await cartClient.clearCart(userId);
    if (clearResp.success) {
      console.log(' Carrito vaciado exitosamente');
    } else {
      console.warn('  No se pudo vaciar el carrito:', clearResp.message);
    }

    // ===== ACTUALIZAR ESTADO DE ORDEN =====
    await Order.findByIdAndUpdate(savedOrder._id, {
      status: 'PAID',
      payment_transaction_id: paymentResp.transaction_id
    });

    console.log(`\n${'='.repeat(60)}`);
    console.log(`ðŸŽ‰ ORDEN COMPLETADA EXITOSAMENTE - ID: ${savedOrder._id}`);
    console.log(`${'='.repeat(60)}\n`);

    res.status(201).json({
      success: true,
      order_id: savedOrder._id,
      total: savedOrder.total,
      items_count: savedOrder.items.length,
      transaction_id: paymentResp.transaction_id,
      message: 'Orden creada y pago procesado exitosamente'
    });

  } catch (err) {
    console.error('\nâŒ ERROR EN FLUJO DE ORDEN:', err);
    res.status(500).json({ message: 'Error procesando orden: ' + err.message });
  }
});

// ====== ENDPOINT LEGACY: Orden individual =====
app.post('/api/orders', async (req, res) => {
  try {
    const { userId, book_id, quantity, price } = req.body;

    if (!userId || !book_id || !quantity || !price) {
      return res.status(400).json({ message: 'Faltan campos obligatorios' });
    }

    const stockResp = await inventoryClient.checkStock(book_id);
    if (!stockResp.in_stock || stockResp.available_units < quantity) {
      return res.status(400).json({ message: 'Stock insuficiente' });
    }

    const reserveResp = await inventoryClient.reserveStock(book_id, quantity);
    if (!reserveResp.success) {
      return res.status(400).json({ message: reserveResp.message });
    }

    const total = quantity * price;
    const newOrder = new Order({
      userId,
      items: [{ book_id, quantity, price, title: 'N/A' }],
      total
    });
    const savedOrder = await newOrder.save();

    const paymentResp = await processPayment(
      savedOrder._id.toString(),
      savedOrder.userId,
      savedOrder.total,
      "card"
    );

    if (!paymentResp.success) {
      await Order.findByIdAndDelete(savedOrder._id);
      return res.status(400).json({ message: 'Pago fallido: ' + paymentResp.message });
    }

    await inventoryClient.confirmStock(book_id, quantity);
    await Order.findByIdAndUpdate(savedOrder._id, { status: 'PAID' });

    res.status(201).json(savedOrder);
  } catch (err) {
    res.status(400).json({ message: err.message });
  }
});

app.put('/api/orders/:id/status', async (req, res) => {
  try {
    const { status } = req.body;
    if (!VALID_STATUSES.includes(status)) {
      return res.status(400).json({
        message: `Estado invÃ¡lido. VÃ¡lidos: ${VALID_STATUSES.join(', ')}`
      });
    }
    const updated = await Order.findByIdAndUpdate(req.params.id, { status }, { new: true });
    if (!updated) return res.status(404).json({ message: 'Orden no encontrada' });
    res.json(updated);
  } catch {
    res.status(400).json({ message: 'Error de actualizaciÃ³n' });
  }
});

app.delete('/api/orders/:id', async (req, res) => {
  try {
    const deleted = await Order.findByIdAndDelete(req.params.id);
    if (!deleted) return res.status(404).json({ message: 'Orden no encontrada' });
    res.json({ message: 'Orden eliminada' });
  } catch {
    res.status(400).json({ message: 'ID invÃ¡lido' });
  }
});

// ====== INICIAR SERVIDOR gRPC (en paralelo al REST) ======
import('./grpc/orderServer.js').catch(err => {
  console.error(' No se pudo iniciar gRPC server:', err.message);
});

// ====== INICIAR SERVIDOR REST ======
app.listen(PORT, () => {
  console.log(`\n${'='.repeat(60)}`);
  console.log(` Order Service iniciado`);
  console.log(`${'='.repeat(60)}`);
  console.log(` REST API: http://localhost:${PORT}`);
  console.log(` gRPC Server: localhost:${process.env.GRPC_PORT || 50056}`);
  console.log(` Inventory gRPC: ${process.env.INVENTORY_GRPC_URL || 'localhost:50051'}`);
  console.log(` Payment gRPC: ${process.env.PAYMENT_GRPC_URL || 'localhost:50052'}`);
  console.log(` Cart gRPC: ${process.env.CART_GRPC_URL || 'localhost:50053'}`);
  console.log(`${'='.repeat(60)}\n`);
});
